feat: login and register routes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://social:social@cluster0.j89fb.mongodb.net/pokedexx?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://social:social@cluster0.nn522.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5200
+SECRET=tryagain
