feat: homepage/ login pages and styling

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://social:social@cluster0.nn522.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5200
 SECRET=tryagain
+GEOCODER_API_KEY=x7Jvy0MyLKRGUTdyuJbjIWBFKbd6GphB
