--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "geocoder": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-geocoder": "^4.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
