feat: model tweak, modal form works

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://social:social@cluster0.nn522.mongodb.net/myFirstDatabase
 PORT=5200
 SECRET=tryagain
 GEOCODER_API_KEY=x7Jvy0MyLKRGUTdyuJbjIWBFKbd6GphB
+CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dlkdaara8/image/upload
