--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.1.4",
     "geocoder": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0"
