--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "^2.29.3",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
-    "node-geocoder": "^4.0.0"
+    "node-geocoder": "^4.0.0",
+    "react-dropzone": "^12.0.5"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
